# softadastra_http

./: .gitignore  CMakeLists.txt  README.md  WAF.txt  architecture.txt  main.py  sertificat-auto-signe.txt
certs/: server-cert.pem  server-key.pem
hash/: CMakeLists.txt  Hash.cpp  Hash.hpp  main.cpp
src/: HomeController.hpp  IRoutes.hpp  ProductController.hpp  UserController.hpp  main.cpp  queries_db.cpp
src/Controllers/: Controller.hpp  HomeController.hpp  ProductController.hpp  TestController.hpp  User.hpp  UserController.hpp
src/config/: Config.cpp  Config.hpp  RouteConfigurator.cpp  RouteConfigurator.hpp  config.json
src/core/http/: HTTPServer.cpp  HTTPServer.hpp  Response.hpp
src/core/routing/: DynamicRequestHandler.cpp  DynamicRequestHandler.hpp  IRequestHandler.hpp  RouteManager.hpp  Router.cpp  Router.hpp  SimpleRequestHandler.hpp  UnifiedRequestHandler.hpp
src/core/session/: Session.cpp  Session.hpp
src/core/threading/: ThreadPool.cpp  ThreadPool.hpp
src/kernel/: DynamicRequestHandler.cpp  HTTPServer.cpp  HTTPServer.hpp  HomeRoutes.hpp  IRoutes.hpp  ProductRoutes.hpp  Response.cpp  Response.hpp  ResponseSender.cpp  ResponseSender.hpp  RouteConfigurator.cpp  RouteConfigurator.hpp  Router.cpp  Router.hpp  Session.cpp  Session.hpp  ThreadPool.cpp  ThreadPool.hpp  UnifiedRequestHandler.hpp  UserRoutes.hpp
src/utils/: Stack.hpp  UnorderedMap.hpp
tests/: CMakeLists.txt
tests/src/: main.cpp
